# clj-pulse

./: .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  bb.edn
.claude/brainstorming/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: DEV_SETUP.md  MEMORY.md  MISSING_PARTS.md  PLAN.md  RELEASE.md  ROADMAP.md
docs/goals/: 2026-06-23-clean-ns-code-action.md  2026-06-29-unused-namespace-diagnostic.md
docs/plans/: 001-index-jars.md  002-goto-definition-libraries.md  2026-06-12-phase1-symbols-utf16.md  2026-06-12-phase2-references-rename.md  2026-06-13-phase3-add-missing-require.md  2026-06-13-phase4-unresolved-namespace-diagnostics.md  2026-06-14-edn-diagnostics-filter.md  2026-06-14-index-declared-source-roots.md  2026-06-14-leiningen-project-clj.md  2026-06-14-lgx-deps-resolver.md  2026-06-15-homebrew-formula-publish.md  2026-06-15-protocol-impl-navigation.md  2026-06-15-protocols-records-navigation.md  2026-06-15-transitive-deps-navigation.md  2026-06-17-letgo-core-navigation.md  2026-06-18-clojure-special-forms-hover.md  2026-06-18-defmethod-defmulti-navigation.md  2026-06-18-keyword-integrant-navigation.md  2026-06-18-letgo-builtins-hover.md  2026-06-26-java-builtin-navigation-completion.md  2026-06-30-clj-kondo-lint-as-config.md  2026-07-01-dim-ignored-forms.md  2026-07-01-let-local-goto-def-completion.md  2026-07-01-lint-as-config-live-reload.md  2026-07-01-ontype-indentation-tier-a.md  2026-07-01-semantic-tokens-tier1.md
editors/vscode/: .vscodeignore  extension.js  package-lock.json  package.json
scripts/: e2e_nvim.lua  gen_core.clj  gen_letgo_native_names.sh  generate-formula.sh
scripts/calva-e2e/: package-lock.json  package.json  runner.js  tests.js
scripts/calva-e2e/fixture/src/: app.clj  other.clj
scripts/calva-e2e/test-ext/: package.json
src/: classpath.rs  config.rs  diagnostics.rs  document.rs  edn.rs  jar_content.rs  kondo.rs  leiningen.rs  lgx.rs  lib.rs  main.rs  server.rs  settings.rs  uri.rs
src/handlers/: builtins.rs  code_action.rs  completion.rs  definition.rs  hover.rs  ignored_forms.rs  indent.rs  java.rs  letgo_builtins.rs  letgo_native_names.rs  mod.rs  references.rs  semantic_tokens.rs  signature.rs  symbols.rs
src/index/: core.rs  extractor.rs  jar.rs  jar_cache.rs  jdk.rs  mod.rs  scanner.rs
tests/: test_completion.rs  test_definition.rs  test_e2e.rs  test_extractor.rs  test_hover.rs  test_index.rs  test_jar_definition.rs
tests/fixtures/integrant_project/resources/: config.edn
tests/fixtures/lein_project/: project.clj
tests/fixtures/lein_project/src/: uses_lib.clj
tests/fixtures/letgo_core_project/: lgx.edn
tests/fixtures/letgo_core_project/src/: app.lg
tests/fixtures/letgo_project/: lgx.edn
tests/fixtures/letgo_project/src/: app.lg
tests/fixtures/snippets/: basic_defn.clj  multi_arity.clj  ns_with_requires.clj  reader_conditional.cljc
(+9 files in other folders)
