[package]
name = "clj-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clj-lsp"
path = "src/main.rs"

[dependencies]
# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Parsing — tree-sitter-clojure 0.1 requires tree-sitter ^0.25, NOT 0.26+
tree-sitter = "0.25"
tree-sitter-clojure = "0.1"
tree-sitter-language = "0.1"

# Concurrency / data structures
dashmap = "5"
rayon = "1"

# File system
ignore = "0.4"
ropey = "1.6"
dirs = "5"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
