[package]
name = "clj-pulse"
version = "0.1.1"
edition = "2021"

[lib]
name = "clj_pulse"
path = "src/lib.rs"

[[bin]]
name = "clj-pulse"
path = "src/main.rs"

[dependencies]
# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Parsing — tree-sitter-clojure 0.1 requires tree-sitter ^0.25, NOT 0.26+
tree-sitter = "0.25"
tree-sitter-clojure = "0.1"
tree-sitter-language = "0.1"
# Java source parsing (JDK src.zip): 0.23.5 depends only on tree-sitter-language,
# so it rides the same ABI shim as tree-sitter-clojure against tree-sitter 0.25.
tree-sitter-java = "0.23"

# Concurrency / data structures
dashmap = "5"
rayon = "1"

# File system
ignore = "0.4"
ropey = "1.6"

# Utilities
edn-format = "3"
percent-encoding = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
bincode = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
